Fri Nov 10 12:22:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/INET_Addr.cpp:
          Fixed argument not used warnings in rtems no network build

Fri Nov 10 10:06:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Reactor_Impl.h:
        * ace/Dev_Poll_Reactor.{h,cpp}:
        * ace/Select_Reactor_T.{h,cpp}:
        * ace/WFMO_Reactor.{h,inl}:
          Changed initialized to return a bool, that is the type we store
          as member.

Fri Nov 10 10:03:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.cpp:
          Const changes and use prefix operators instead of postfix

        * ace/Process.cpp:
          Use prefix increment instead of postfix

        * ace/Reactor.cpp (timer_queue):
          No need to use an intermediate variable

Fri Nov 10 05:47:15 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/bczar/bczar.html

          Updates to release script documentation.

Thu Nov  9 20:07:42 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.cpp:

          A follow up to my change from "Wed Nov 8 22:12:46". Adding the
          close_svcs() call in ACE_Service_Config::close() ensured that
          the repository and its contents gets properly finalized, but it
          did not account for the potential subsequent re-opening of the
          Service Config. This causes failures in open/close/open
          scenarios, like Framework_Component_Test.

Thu Nov  9 19:59:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_aix4_cset++.GNU:
        * include/makeinclude/platform_integrity_ghs.GNU:
        * include/makeinclude/platform_irix6.x_sgic++.GNU:
        * include/makeinclude/platform_linux_pgi.GNU:
        * include/makeinclude/platform_macosx_panther.GNU:
        * include/makeinclude/platform_macosx_tiger.GNU: