@@ -122,7 +122,7 @@ take a couple minutes to complete.</li>
 
 <ul><li>These commands only tags and creates the kits for the
  software itself, not documentation. </li>
-<li>The kits end up in <tt>/export/project/deuce/ftp/pub/ACE+TAO-distribution</tt></li>
+<li>The kits end up in <tt>/export/anduriltmp/bczar/packages</tt></li>
 </ul>
 <p>
 To summarise, the following is a transcript of the steps up to this point executing
